Overflow Fix

--- a/src/_assets/stylesheets/app.css
+++ b/src/_assets/stylesheets/app.css
@@ -101,7 +101,10 @@
 	top: 100%;
 	width: 100%;
 	height: 0;
-	/* overflow: hidden; */
+	overflow: hidden;
+}
+.active.sub-nav {
+	overflow: visible;
 }
 
 nav a:hover + .sub-nav:not(.sub-sub-nav),
